welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
	setCouleurBrosse();
                        ^MethodsPicture:22: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	faireV();
              ^